--- a/site_media/html/usuario_template.html
+++ b/site_media/html/usuario_template.html
@@ -3,8 +3,7 @@
 <html lang="es">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link rel="stylesheet" type="text/css"
-        href="/site_media/css/base_template.css">
+        <link rel="stylesheet" type="text/css" href="/ExtremePro/site_media/css/base_template.css">
         <title>ABM de Usuarios: {subtitulo}</title>
 </head>
 <body>
@@ -14,10 +13,10 @@
     </div>
 
     <div id="menu">
-        <a href="/{VIEW_SET_USER}" title="Nuevo usuario">Agregar usuario</a>
-        <a href="/{VIEW_GET_USER}" title="Buscar usuario">Buscar/editar
+        <a href="/ExtremePro/{VIEW_SET_USER}" title="Nuevo usuario">Agregar usuario</a>
+        <a href="/ExtremePro/{VIEW_GET_USER}" title="Buscar usuario">Buscar/editar
             usuario</a>
-        <a href="/{VIEW_DELETE_USER}" title="Borrar usuario">Borrar
+        <a href="/ExtremePro/{VIEW_DELETE_USER}" title="Borrar usuario">Borrar
             usuario</a>
     </div>
     <div id="mensaje">
